--- a/sass/_bootstrap-styles.scss
+++ b/sass/_bootstrap-styles.scss
@@ -2,7 +2,7 @@
 @import "bootstrap-compass";
 
 // Import custom Bootstrap variables
-@import "bootstrap-variables";
+//@import "bootstrap-variables";
 
 // FIXME
 $icon-font-path: "/assets/fonts/bootstrap/";
